--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -79,10 +79,12 @@
                 "
                 src="{{ card_product.featured_media | image_url: width: 533 }}"
                 sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
-                alt="{{ card_product.featured_media.alt | escape }}"
+                alt="{{ card_product.featured_media.alt | escape | default: card_product.title | escape }}"
                 class="motion-reduce"
                 {% unless lazy_load == false %}
                   loading="lazy"
+                {% else %}
+                  fetchpriority="high"
                 {% endunless %}
                 width="{{ card_product.featured_media.width }}"
                 height="{{ card_product.featured_media.height }}"
@@ -102,7 +104,7 @@
                   "
                   src="{{ card_product.media[1] | image_url: width: 533 }}"
                   sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 130 | divided_by: 4 }}px, (min-width: 990px) calc((100vw - 130px) / 4), (min-width: 750px) calc((100vw - 120px) / 3), calc((100vw - 35px) / 2)"
-                  alt="{{ card_product.media[1].alt | escape }}"
+                  alt="{{ card_product.media[1].alt | escape | default: card_product.title | escape }}"
                   class="motion-reduce"
                   loading="lazy"
                   width="{{ card_product.media[1].width }}"
@@ -180,11 +182,11 @@
             <span class="card__moq-label">MOQ: {{ moq }}</span>
 
             {% if card_product.price == 0 %}
-              <a href="/pages/request-a-quote?product={{ card_product.title | url_encode }}" class="card__button">
+              <a href="/pages/request-a-quote?product={{ card_product.title | url_encode }}" class="card__button" aria-label="Request quote for {{ card_product.title | escape }}">
                 Request Quote
               </a>
             {% else %}
-              <a href="{{ card_product.url }}" class="card__button">
+              <a href="{{ card_product.url }}" class="card__button" aria-label="Buy {{ card_product.title | escape }} now">
                 Buy Now
               </a>
             {% endif %}
